Modificacion al index

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		</div>
 
 		<div class="right">
-			<p class="p4">Web Designer</p>
-			<p class="p5">Retoching Company</p>
+			<p class="p4">CTS TECHNICIAN</p>
+			<p class="p5">PEGATRON MEXICO</p>
 			<p class="p5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 		</div>
 		<div class="clearfix"></div>
